# damavand

./: 404.html  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  README.md  build.rs  cloudbuild.yaml  index.html  pyproject.toml  requirements-dev.txt  setup-cpu.py  setup-profiling.py  setup.py
.github/workflows/: deploy-documentation.yml  python-publish.yml
Dockerfiles/CPU/: Dockerfile
Dockerfiles/GPU/: Dockerfile
assets/css/: 0.styles.b6c198ef.css
assets/js/: 10.197d1d59.js  11.16a8b93a.js  12.6f318769.js  13.59bd2fd3.js  14.d89faf33.js  3.3c6af9ab.js  4.dfbfd2c3.js  5.9a5b71e3.js  7.6a991910.js  8.ce708f5f.js  9.a6e55c32.js  app.9db3aee0.js
benchmarks/: plot_times.py
benchmarks/time_cpu/: benchmarks.py  run.sh
benchmarks/time_gpu/: benchmarks.py  run.sh
benchmarks/time_multi_node_cpu/: plot_times.py  run.sh  sample_benchmarks.py
damavand-gpu/: CMakeLists.txt  kernels.cu  kernels.cuh  quantum_amplitudes.cu  quantum_amplitudes.cuh  rust_communication.cu  utils.cu  utils.cuh
docs/: 404.html  cloudbuild.yaml  deploy.sh  index.html  package.json
docs/assets/js/: 10.2f026394.js  11.5393efdd.js  12.67031a6c.js  3.1ac3f9ad.js  7.ed9f93d3.js  8.c22030f7.js  9.042a3fc4.js  app.69676b56.js
docs/guide/: index.html
docs/hpc/: index.html
docs/install/: index.html
docs/pennylane-plugin/: index.html
docs/prevision-quantum-nn/: index.html
docs/src/: index.md
docs/src/.vuepress/: config.js
docs/src/.vuepress/public/: ?
docs/src/.vuepress/styles/: index.styl  palette.styl
docs/src/guide/: README.md
docs/src/hpc/: README.md
docs/src/install/: README.md
docs/src/pennylane-plugin/: README.md
docs/src/prevision-quantum-nn/: README.md
docs_website/: package.json
docs_website/src/pennylane-plugin/: README.md
examples/multiple_nodes_cpu/: run.sh  two_nodes.py
examples/multiple_nodes_multiple_gpus/: multiple_nodes_multiple_gpus.py  run.sh
examples/single_node_cpu/: run.sh  single_node.py
examples/single_node_multiple_gpus/: run.sh  single_node_multiple_gpus.py
examples/single_node_single_gpu/: run.sh  single_node_single_gpu.py
guide/: index.html
hpc/: index.html
install/: index.html
pennylane-plugin/: index.html
rust_doc_theme/: damavand_theme.css
scripts/actions/: install_cuda_ubuntu.sh
src/: lib.rs  profiler.rs  qubit_backend.rs  utils.rs
src/qubit_backend/: circuit.rs  circuit_brute_force.rs  circuit_distributed.rs  circuit_distributed_cpu.rs  circuit_distributed_gpu.rs  circuit_gpu.rs  circuit_metrics.rs  circuit_multithreading.rs  circuit_profiling.rs  circuit_shuffle.rs  gates.rs
tests/: test_circuit.py  test_state.py
